Try fix server by increasing tomcat memory doc