@@ -1,6 +1,20 @@
 # smart-building-soa-project
 Use of a Service Oriented Architecture in order do develop a Smart Building Application.
 
+## Setup
+
+### Project import
+
+With eclipse.
+
+### Tomcat RAM usage 
+
+It might be necessary to increase the Tomcat server memory
+
+Under the file ```TOMCAT_HOME/bin/setenv.sh``` (UNIX) (create if it doesn't exist), enter :
+
+> export JAVA_OPTS="-Dfile.encoding=UTF-8 -Xms128m -Xmx2048m -XX:PermSize=265m -XX:MaxPermSize=1024m"
+
 ## Services
 
 ### Temperature sensors REST API
